tests/ui/parser/using_operator_not_user_definable.sol
// Solc test: test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_non_user_definable.sol.

using {f as new} for uint; //~ ERROR: expected
